[package]
name = "dllvoid"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/dllvoid"
repository = "https://github.com/CURVoid/DllVoid"
homepage = "https://github.com/CURVoid/DllVoid"
keywords = ["dllvoid", "dll", "injector", "injection", "winapi"]
description = "Crate for raw socketing, can be used for sending raw packets and some protocols"

[dependencies]
cural = "0.1.3"

[dependencies.winapi]
version = "0.3.9"
features = [
  "winnt",
  "winbase",
  "winuser",
  "synchapi",
  "memoryapi",
  "handleapi",
  "libloaderapi",
  "processthreadsapi"
]